<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="50dp"
    android:orientation="horizontal" android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/title_bar">
    
	<ImageButton 
		android:id="@+id/imgBtnBack"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:clickable="true"
	    android:background="@drawable/arrow_normal"
	    android:src="@drawable/button_back"
	    android:contentDescription="@string/back"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"/>
	<ImageView
	    android:id="@+id/imgTitle"
	    android:layout_width="35dp"
	    android:layout_height="fill_parent"
	    android:src="@drawable/ic_launcher"
	    android:contentDescription="@string/app_name"/>
	<TextView
		android:id="@+id/txtTitle"
		android:text="@string/new_note"
		android:layout_width="0dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:singleLine="true"
		android:ellipsize="end"
		android:paddingLeft="10dp"
		android:paddingTop="10dp"
		style="@style/Title"/>
</LinearLayout>