<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/pop_board" >

    <LinearLayout 
        android:id="@+id/layoutTitle"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:gravity="center">
		<ImageView 
		    android:id="@+id/icon"
		    android:src="@drawable/icon_warning"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/delete_folder_warning"/>
        <TextView
            style="@style/DialogText.Title"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/add_folder"/>
    </LinearLayout>
	<LinearLayout 
        android:id="@+id/content"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/layoutTitle"
        android:gravity="center">
 		<TextView
            style="@style/DialogText"
            android:id="@+id/message"
            android:padding="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:singleLine="false"/>
 		</LinearLayout>
    <LinearLayout 
        android:id="@+id/layoutButton"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginBottom="10dp">
        <Button 
            android:id="@+id/positiveButton"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:text="@string/cancel"
            android:background="@drawable/button_pop"
            style="@style/Button"/>
        <Button 
            android:id="@+id/negativeButton"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:text="@string/done"
            android:background="@drawable/button_pop"
            style="@style/Button"/>
    </LinearLayout>
</RelativeLayout>